--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -3,4 +3,7 @@
 
 <%= link_to "Back", root_path %>
 <%= link_to "Edit", edit_item_path(@item) %>
-<%= link_to "Delete", item_path(@item), method: :delete, data: { confirm: "Are you sure?" } %>
+<%= button_to "Delete",
+                    item_path(@item),
+                    method: :delete,
+                    data: { confirm: "Are you sure?" } %>
