--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,6 +1,45 @@
-<% @items.each do |item| %>
-  <h2><%= link_to item.title, item %></h2>
-  <p><%= item.description %></p>
+<% if user_signed_in? %>
+  <div class="col-md-6 col-md-offset-3">
+  <% @items.each do |item| %>
+    <% if item.completed? %>
+      <div class="row item">
+      <div class="col-md-8">
+          <h2 style="opacity: 0.5;"><del><%= link_to item.title, item %></del></h2>
+          <p style="opacity: 0.5;"><%= item.description %></p>
+          <p>Completed <%= time_ago_in_words(item.completed_at) %> ago</p>
+        </div>
+        <div class="col-md-2">
+          <p><%= link_to complete_item_path(item), method: :patch do %></p>
+            <p>check</p>
+          <% end %>
+        </div>
+        <div class="col-md-2">
+          <p><%= link_to item, method: :delete, data: { confirm: "Are you sure?" } do %></p>
+            <p>delete</p>
+          <% end %>
+        </div>
+      </div>
+    <% else %>
+      <div class="row item">
+        <div class="col-md-8">
+          <h2><%= link_to item.title, item %></h2>
+          <p><%= item.description %></p>
+          <p>Created <%= time_ago_in_words(item.created_at) %> ago</p>
+        </div>
+        <div class="col-md-2">
+          <p><%= link_to complete_item_path(item), method: :patch do %></p>
+            <p>check</p>
+          <% end %>
+        </div>
+        <div class="col-md-2">
+          <p><%= link_to item, method: :delete, data: { confirm: "Are you sure?" } do %></p>
+            <p>delete</p>
+          <% end %>
+        </div>
+      </div>
+    <% end %>
+  <% end %>
+  </div>
+<% else %>
+  <%= render 'layouts/static_landing_page' %>
 <% end %>
-
-<%= link_to "New Item", new_item_path %>
