--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,5 +11,25 @@
  * It is generally better to create a new file per style scope.
  */
 // "bootstrap-sprockets" must be imported before "bootstrap" and "bootstrap/variables"
+@import url(http://fonts.googleapis.com/css?family=Oswald:400,700|Merriweather:400,300);
 @import "bootstrap-sprockets";
 @import "bootstrap";
+
+/* Mixins, variables, etc... */
+
+@mixin nav_link_hover {
+	transition: 0.4s;
+	color: lighten(#222, 30%);
+	text-decoration: none;
+}
+
+/* Universal styles */
+
+body {
+	font-family: 'Merriweather', serif;
+  background-color: rgb(236, 227, 227);
+}
+
+a {
+	color: darken(#e7e7e7, 70%);
+}
