--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -1,5 +1,6 @@
 <%= simple_form_for @item do |f| %>
   <%= f.input :title, label: "Item" %>
   <%= f.input :description %>
-  <%= f.button :submit %>
+  <%= f.button :submit, class:"btn btn-success" %>
+  <%= link_to "Back", root_path, class:"btn btn-info" %>
 <% end %>
