--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -4,36 +4,35 @@
     <% if item.completed? %>
       <div class="row item">
       <div class="col-md-8">
-          <h2 style="opacity: 0.5;"><del><%= link_to item.title, item %></del></h2>
-          <p style="opacity: 0.5;"><%= item.description %></p>
-          <p>Completed <%= time_ago_in_words(item.completed_at) %> ago</p>
+          <h2 style="opacity: 0.5;" class="item-title"><del><%= link_to item.title, item %></del></h2>
+          <p style="opacity: 0.5;" class="item-desc item-sub-title"><%= item.description %></p>
+          <p class="time-ago item-sub-title">Completed <%= time_ago_in_words(item.completed_at) %> ago</p>
         </div>
         <div class="col-md-2">
           <p><%= link_to complete_item_path(item), method: :patch do %></p>
-            <p>check</p>
           <% end %>
         </div>
         <div class="col-md-2">
           <p><%= link_to item, method: :delete, data: { confirm: "Are you sure?" } do %></p>
-            <p>delete</p>
+            <h3><i class="fa-solid fa-trash text-danger"></i></h3>
           <% end %>
         </div>
       </div>
     <% else %>
       <div class="row item">
         <div class="col-md-8">
-          <h2><%= link_to item.title, item %></h2>
-          <p><%= item.description %></p>
-          <p>Created <%= time_ago_in_words(item.created_at) %> ago</p>
+          <h2 class="item-title"><%= link_to item.title, item %></h2>
+          <p class="item-desc item-sub-title"><%= item.description %></p>
+          <p class="time-ago item-sub-title">Created <%= time_ago_in_words(item.created_at) %> ago</p>
         </div>
         <div class="col-md-2">
           <p><%= link_to complete_item_path(item), method: :patch do %></p>
-            <p>check</p>
+            <h3><i class="fa-solid fa-check text-success"></i></h3>
           <% end %>
         </div>
         <div class="col-md-2">
           <p><%= link_to item, method: :delete, data: { confirm: "Are you sure?" } do %></p>
-            <p>delete</p>
+            <h3><i class="fa-solid fa-trash text-danger"></i></h3>
           <% end %>
         </div>
       </div>
